Added more attempts

--- a/BA - data merger.Rmd
+++ b/BA - data merger.Rmd
@@ -6,9 +6,7 @@ editor_options:
     wrap: 72
 ---
 
-## General information about data sets
-
-## Load data
+# Load data
 
 ```{r}
 women_in_parliament <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/women_in_parliament.csv",show_col_types = FALSE)
@@ -30,134 +28,136 @@ CO2 <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/prepr
 murder <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/murder.csv",show_col_types = FALSE)
 ```
 
-## General information about data sets
+# General information about data sets
 
 ```{r}
-titles <- c(
-"women_in_parliament",
-"basic_sanitation",
-"basic_water_source",
-"electricity",
-"employment_rate",
-"material_footprint",
-"forest_area",
-"mean_years_in_school",
-"air_pollution",
-"health_worker",
-"red_list",
-"poverty",
-"life_expectancy",
-"income",
-"income_share_20",
-"CO2",
-"murder"
-)
-
-earliest <- c(
-min(women_in_parliament$year),
-min(basic_sanitation$year),
-min(basic_water_source$year),
-min(electricity$year),
-min(employment_rate$year),
-min(material_footprint$year),
-min(forest_area$year),
-min(mean_years_in_school$year),
-min(health_worker$year),
-min(air_pollution$year),
-min(red_list$year),
-min(poverty$year),
-min(life_expectancy$year),
-min(income$year),
-min(income_share_20$year),
-min(CO2$year),
-min(murder$year)
-)
-
-latest <- c(
-max(women_in_parliament$year),
-max(basic_sanitation$year),
-max(basic_water_source$year),
-max(electricity$year),
-max(employment_rate$year),
-max(material_footprint$year),
-max(forest_area$year),
-max(mean_years_in_school$year),
-max(health_worker$year),
-max(air_pollution$year),
-max(red_list$year),
-max(poverty$year),
-max(life_expectancy$year),
-max(income$year),
-max(income_share_20$year),
-max(CO2$year),
-max(murder$year)
-)
-
-datapoints <- c(
-nrow(women_in_parliament),
-nrow(basic_sanitation),
-nrow(basic_water_source),
-nrow(electricity),
-nrow(employment_rate),
-nrow(material_footprint),
-nrow(forest_area),
-nrow(mean_years_in_school),
-nrow(air_pollution),
-nrow(health_worker),
-nrow(red_list),
-nrow(poverty),
-nrow(life_expectancy),
-nrow(income),
-nrow(income_share_20),
-nrow(CO2),
-nrow(murder)
-)
-
-dps_1990_2020 <- c(
-nrow(subset(women_in_parliament, year %in% c(1990:2020))),
-nrow(subset(basic_sanitation, year %in% c(1990:2020))),
-nrow(subset(basic_water_source, year %in% c(1990:2020))),
-nrow(subset(electricity, year %in% c(1990:2020))),
-nrow(subset(employment_rate, year %in% c(1990:2020))),
-nrow(subset(material_footprint, year %in% c(1990:2020))),
-nrow(subset(forest_area, year %in% c(1990:2020))),
-nrow(subset(mean_years_in_school, year %in% c(1990:2020))),
-nrow(subset(air_pollution, year %in% c(1990:2020))),
-nrow(subset(health_worker, year %in% c(1990:2020))),
-nrow(subset(red_list, year %in% c(1990:2020))),
-nrow(subset(poverty, year %in% c(1990:2020))),
-nrow(subset(life_expectancy, year %in% c(1990:2020))),
-nrow(subset(income, year %in% c(1990:2020))),
-nrow(subset(income_share_20, year %in% c(1990:2020))),
-nrow(subset(CO2, year %in% c(1990:2020))),
-nrow(subset(murder, year %in% c(1990:2020)))
-)
-
-
-zero_or_below <- c(
-(min(women_in_parliament$value, na.rm = TRUE) <= 0),
-(min(basic_sanitation$value, na.rm = TRUE) <= 0),
-(min(basic_water_source$value, na.rm = TRUE) <= 0),
-(min(electricity$value, na.rm = TRUE) <= 0),
-(min(employment_rate$value, na.rm = TRUE) <= 0),
-(min(material_footprint$value, na.rm = TRUE) <= 0),
-(min(forest_area$value, na.rm = TRUE) <= 0),
-(min(mean_years_in_school$value, na.rm = TRUE) <= 0),
-(min(air_pollution$value, na.rm = TRUE) <= 0),
-(min(health_worker$value, na.rm = TRUE) <= 0),
-(min(red_list$value, na.rm = TRUE) <= 0),
-(min(poverty$value, na.rm = TRUE) <= 0),
-(min(life_expectancy$value, na.rm = TRUE) <= 0),
-(min(income$value, na.rm = TRUE) <= 0),
-(min(income_share_20$value, na.rm = TRUE) <= 0),
-(min(CO2$value, na.rm = TRUE) <= 0),
-(min(murder$value, na.rm = TRUE) <= 0)
-)
-
-dp_per_year <- datapoints / (latest - earliest)
-
-overview <- data.frame(titles, earliest, latest, dps_1990_2020, datapoints, dp_per_year, zero_or_below)
-overview[order(overview$dps_1990_2020, decreasing = TRUE),]
+# titles <- c(
+# "women_in_parliament",
+# "basic_sanitation",
+# "basic_water_source",
+# "electricity",
+# "employment_rate",
+# "material_footprint",
+# "forest_area",
+# "mean_years_in_school",
+# "air_pollution",
+# "health_worker",
+# "red_list",
+# "poverty",
+# "life_expectancy",
+# "income",
+# "income_share_20",
+# "CO2",
+# "murder"
+# )
+# 
+# earliest <- c(
+# min(women_in_parliament$year),
+# min(basic_sanitation$year),
+# min(basic_water_source$year),
+# min(electricity$year),
+# min(employment_rate$year),
+# min(material_footprint$year),
+# min(forest_area$year),
+# min(mean_years_in_school$year),
+# min(health_worker$year),
+# min(air_pollution$year),
+# min(red_list$year),
+# min(poverty$year),
+# min(life_expectancy$year),
+# min(income$year),
+# min(income_share_20$year),
+# min(CO2$year),
+# min(murder$year)
+# )
+# 
+# latest <- c(
+# max(women_in_parliament$year),
+# max(basic_sanitation$year),
+# max(basic_water_source$year),
+# max(electricity$year),
+# max(employment_rate$year),
+# max(material_footprint$year),
+# max(forest_area$year),
+# max(mean_years_in_school$year),
+# max(health_worker$year),
+# max(air_pollution$year),
+# max(red_list$year),
+# max(poverty$year),
+# max(life_expectancy$year),
+# max(income$year),
+# max(income_share_20$year),
+# max(CO2$year),
+# max(murder$year)
+# )
+# 
+# datapoints <- c(
+# nrow(women_in_parliament),
+# nrow(basic_sanitation),
+# nrow(basic_water_source),
+# nrow(electricity),
+# nrow(employment_rate),
+# nrow(material_footprint),
+# nrow(forest_area),
+# nrow(mean_years_in_school),
+# nrow(air_pollution),
+# nrow(health_worker),
+# nrow(red_list),
+# nrow(poverty),
+# nrow(life_expectancy),
+# nrow(income),
+# nrow(income_share_20),
+# nrow(CO2),
+# nrow(murder)
+# )
+# 
+# dps_1990_2020 <- c(
+# nrow(subset(women_in_parliament, year %in% c(1990:2020))),
+# nrow(subset(basic_sanitation, year %in% c(1990:2020))),
+# nrow(subset(basic_water_source, year %in% c(1990:2020))),
+# nrow(subset(electricity, year %in% c(1990:2020))),
+# nrow(subset(employment_rate, year %in% c(1990:2020))),
+# nrow(subset(material_footprint, year %in% c(1990:2020))),
+# nrow(subset(forest_area, year %in% c(1990:2020))),
+# nrow(subset(mean_years_in_school, year %in% c(1990:2020))),
+# nrow(subset(air_pollution, year %in% c(1990:2020))),
+# nrow(subset(health_worker, year %in% c(1990:2020))),
+# nrow(subset(red_list, year %in% c(1990:2020))),
+# nrow(subset(poverty, year %in% c(1990:2020))),
+# nrow(subset(life_expectancy, year %in% c(1990:2020))),
+# nrow(subset(income, year %in% c(1990:2020))),
+# nrow(subset(income_share_20, year %in% c(1990:2020))),
+# nrow(subset(CO2, year %in% c(1990:2020))),
+# nrow(subset(murder, year %in% c(1990:2020)))
+# )
+# 
+# 
+# zero_or_below <- c(
+# (min(women_in_parliament$value, na.rm = TRUE) <= 0),
+# (min(basic_sanitation$value, na.rm = TRUE) <= 0),
+# (min(basic_water_source$value, na.rm = TRUE) <= 0),
+# (min(electricity$value, na.rm = TRUE) <= 0),
+# (min(employment_rate$value, na.rm = TRUE) <= 0),
+# (min(material_footprint$value, na.rm = TRUE) <= 0),
+# (min(forest_area$value, na.rm = TRUE) <= 0),
+# (min(mean_years_in_school$value, na.rm = TRUE) <= 0),
+# (min(air_pollution$value, na.rm = TRUE) <= 0),
+# (min(health_worker$value, na.rm = TRUE) <= 0),
+# (min(red_list$value, na.rm = TRUE) <= 0),
+# (min(poverty$value, na.rm = TRUE) <= 0),
+# (min(life_expectancy$value, na.rm = TRUE) <= 0),
+# (min(income$value, na.rm = TRUE) <= 0),
+# (min(income_share_20$value, na.rm = TRUE) <= 0),
+# (min(CO2$value, na.rm = TRUE) <= 0),
+# (min(murder$value, na.rm = TRUE) <= 0)
+# )
+# 
+# dp_per_year <- datapoints / (latest - earliest)
+# 
+# overview <- data.frame(titles, earliest, latest, dps_1990_2020, datapoints, dp_per_year, zero_or_below)
+# overview[order(overview$dps_1990_2020, decreasing = TRUE),]
+# 
+# write_csv(overview, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/overview.csv")
 ```
 
 Using data sets that have values of 0 or less might be an issue later on
@@ -198,6 +198,120 @@ Data sets that (as of now) look very promising:
 
 -   CO2
 
+## Attempt 8 - 4 data sets
+
+| Input                | Output          |
+|----------------------|-----------------|
+| electricity          | life_expectancy |
+| mean_years_in_school | income          |
+|                      | CO2             |
+
+**Merge data**
+
+```{r}
+all_data <- list(
+  electricity,
+  mean_years_in_school,
+  CO2,
+  life_expectancy,
+  income
+
+)
+
+final_7 <- all_data %>% reduce(full_join, by = c("country", "year"))
+
+colnames(final_7) <- c(
+  "country",
+  "year",
+  "electricity",
+  "mean_years_in_school",
+  "CO2",
+  "life_expectancy",
+  "income"
+)
+
+final_7 <- as.data.frame(final_7)
+
+final_7 <- drop_na(final_7)
+
+nrow(final_7)
+```
+
+-\> 4037 DMUs
+
+**Check for 0 values**
+
+```{r}
+min(final_7$women_in_parliament)
+min(final_7$forest_area)
+min(final_7$mean_years_in_school)
+min(final_7$poverty)
+min(final_7$CO2)
+```
+
+**Export to csv**
+
+```{r}
+write_csv(final_7, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/final_7.csv")
+```
+
+## Attempt 7 - 5 data sets
+
+| Input                | Output          |
+|----------------------|-----------------|
+| electricity          | life_expectancy |
+| mean_years_in_school | income          |
+|                      | CO2             |
+
+**Merge data**
+
+```{r}
+all_data <- list(
+  electricity,
+  mean_years_in_school,
+  CO2,
+  life_expectancy,
+  income
+
+)
+
+final_7 <- all_data %>% reduce(full_join, by = c("country", "year"))
+
+colnames(final_7) <- c(
+  "country",
+  "year",
+  "electricity",
+  "mean_years_in_school",
+  "CO2",
+  "life_expectancy",
+  "income"
+)
+
+final_7 <- as.data.frame(final_7)
+
+final_7 <- drop_na(final_7)
+
+nrow(final_7)
+```
+
+-\> 4037 DMUs
+
+**Check for 0 values**
+
+```{r}
+min(final_7$women_in_parliament)
+min(final_7$forest_area)
+min(final_7$mean_years_in_school)
+min(final_7$poverty)
+min(final_7$CO2)
+```
+
+**Export to csv**
+
+```{r}
+write_csv(final_7, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/final_7.csv")
+```
+
 ## Attempt 6 - 5 data sets
 
 | Input           | Output          |
@@ -237,7 +351,7 @@ final_6 <- drop_na(final_6)
 nrow(final_6)
 ```
 
--\> 2594 DMUs
+-\> 4421 DMUs
 
 **Check for 0 values**
 
