--- a/code/BA - Visualization.Rmd
+++ b/code/BA - Visualization.Rmd
@@ -13,10 +13,13 @@ library(ggplot2)
 ## load data
 
 ```{r}
-data <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/dea_results.csv", show_col_types = FALSE)
+data <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/dea_results_11_io_vrs.csv", show_col_types = FALSE)
 ```
 
-
+## Some stats
+```{r}
+summary(data)
+```
 
 ## years vs effiviency
 
@@ -24,7 +27,7 @@ data <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_dat
 data %>%
   filter(continent == "Europe") %>%
   ggplot(aes(year, efficiencies))+
-  geom_point(aes(
+  geom_line(aes(
     color=country
   ))
 ```
@@ -33,22 +36,34 @@ data %>%
 ```{r}
 data %>%
   # filter(continent == "Africa") %>%
+  filter(year %in% c(2000:2010)) %>%
+
   ggplot(aes(continent, efficiencies))+
   geom_boxplot()+
   geom_jitter(width = 0.1,
               alpha = 0.5,
               aes(
                 color=year
-              ))
+              )
+              )
 ```
 
 
 ```{r}
 
 data %>%
-  filter(year==1992) %>%
-  filter(efficiencies==1) %>%
-  mean(income)
+  # filter(continent == "Africa") %>%
+  filter(year %in% c(2010:2020)) %>%
+
+  ggplot(aes(continent, efficiencies))+
+  geom_boxplot()+
+  geom_jitter(width = 0.1,
+              alpha = 0.5,
+              aes(
+                color=year
+              )
+              )
+
 
 ```
 
