--- a/code/BA - Visualization.Rmd
+++ b/code/BA - Visualization.Rmd
@@ -13,7 +13,7 @@ library(ggplot2)
 ## load data
 
 ```{r}
-data <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/dea_results_11_io_vrs.csv", show_col_types = FALSE)
+data <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/dea_results_8_io_vrs.csv", show_col_types = FALSE)
 ```
 
 ## Some stats
@@ -31,7 +31,7 @@ data %>%
     color=country
   ))
 ```
-## Efficnienies per continent (all years)
+## Efficienies per continent (all years)
 
 ```{r}
 data %>%
