--- a/code/BA - correlation analysis.Rmd
+++ b/code/BA - correlation analysis.Rmd
@@ -7,8 +7,6 @@ output: html_notebook
 library(tidyverse)
 ```
 
-
-
 ```{r}
 women_in_parliament <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/women_in_parliament.csv",show_col_types = FALSE)
 basic_sanitation <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/basic_sanitation.csv",show_col_types = FALSE)
@@ -29,14 +27,74 @@ CO2 <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/prepr
 murder <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/murder.csv",show_col_types = FALSE)
 ```
 
-
 ```{r}
 test1 <- merge(CO2, income, by =c("country","year"))
+test1$country <- NULL
+test1$year <- NULL
+colnames(test1) <- c("CO2","income")
 ```
-
-
 
 ```{r}
-cor(test1)
+cor(test1$CO2, test1$income, use = "complete.obs")
 ```
 
+```{r}
+# Create list of all data frames
+all_data <- list(
+  women_in_parliament,
+  basic_sanitation,
+  basic_water_source,
+  electricity,
+  employment_rate,
+  material_footprint,
+  forest_area,
+  mean_years_in_school,
+  health_worker,
+  air_pollution,
+  red_list,
+  poverty,
+  life_expectancy,
+  income,
+  income_share_20,
+  CO2,
+  murder
+)
+```
+
+```{r}
+# Merge all data frame together by the country attribute
+
+data <- all_data %>% reduce(full_join, by=c("country", "year"))
+```
+
+```{r}
+# Change column names to something meaningful
+
+colnames(data) <- c(
+  "country",
+  "year",
+  "women_in_parliament",
+  "basic_sanitation",
+  "basic_water_source",
+  "electricity",
+  "employment_rate",
+  "material_footprint",
+  "forest_area",
+  "mean_years_in_school",
+  "air_pollution",
+  "health_worker",
+  "red_list",
+  "poverty",
+  "life_expectancy",
+  "income",
+  "income_share_20",
+  "CO2",
+  "murder"
+)
+```
+
+Easy approach to calculate all correlations.
+
+```{r}
+as.data.frame(cor(data[3:length(data)], use = "pairwise.complete.obs"))
+```
